--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <ul id="todo-list">
         <li class="todo-item">
+            <span class="todo-id">X</span>
             <span class="todo-title">Mi Titulo</span>
             <span class="todo-user">1</span>
             <span class="todo-completed">Completed</span>
-            <button class="todo-edit">Editar</button>
             <button class="todo-delete">Eliminar</button>
         </li>
     </ul>
@@ -43,6 +43,15 @@
         <input type="number" id="todo-user-create" placeholder="user"/>
         <button id="todo-create">Agregar</button>
     </section>
-	<script src="index.js"></script>
+    <script src="variables.js"></script>
+    <script src="printlist.js"></script>
+    <script src="create.js"></script>
+    <script src="delete.js"></script>
+   
+    
+    <script src=""></script>
+    <script src=""></script>
+
+
 </body>
 </html>
