--- a/index.html
+++ b/index.html
@@ -21,13 +21,6 @@
 </head>
 <body>
     <ul id="todo-list">
-        <li class="todo-item">
-            <span class="todo-id">X</span>
-            <span class="todo-title">Mi Titulo</span>
-            <span class="todo-user">1</span>
-            <span class="todo-completed">Completed</span>
-            <button class="todo-delete">Eliminar</button>
-        </li>
     </ul>
     <section class="card">
         <h1>Modificar To Do</h1>
@@ -47,7 +40,7 @@
     <script src="printlist.js"></script>
     <script src="create.js"></script>
     <script src="delete.js"></script>
-   
+   <script src="modify.js"></script>
     
     <script src=""></script>
     <script src=""></script>
