--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
     <title>To Do!</title>
-    <style>
-        .todo-title, .todo-user {
-            border-right: 1px solid #999;
-        }
-        .todo-title, .todo-user, .todo-completed {
-            padding: 15px;
-        }
-        .card{
-            box-shadow: 0 0 5px #666;
-            padding: 25px;
-            margin: 25px;
-        }
-    </style>
-</head>
+    
+    </head>
 <body>
     <ul id="todo-list">
+        <li>
+            <span>ID</span>
+            <span>Tarea</span>
+            <span>Usuario</span>
+            <span>Completada</span>
+            <span>Eliminar</span>
+
+        </li>
     </ul>
-    <section class="card">
-        <h1>Modificar To Do</h1>
-        <input type="number" value="1" id="todo-id-update" />
-        <input type="text" value="mi titulo" id="todo-title-update" />
-        <input type="number" value="1" id="todo-user-update" />
-        <input type="checkbox" checked id="todo-completed-update" />
-        <button id="todo-update">Modificar</button>
+    <section class="card-container">
+        <section class="card">
+            <h1>Modificar To Do</h1>
+            <input type="number" value="1" id="todo-id-update" />
+            <input type="text" value="mi titulo" id="todo-title-update" />
+            <input type="number" value="1" id="todo-user-update" />
+            <input type="checkbox" checked id="todo-completed-update" />
+            <button id="todo-update">Modificar</button>
+        </section>
+        <section class="card">
+            <h1>Agregar To Do</h1>
+            <input type="text" id="todo-title-create" placeholder="title"/>
+            <input type="number" id="todo-user-create" placeholder="user"/>
+            <button id="todo-create">Agregar</button>
+        </section>
     </section>
-    <section class="card">
-        <h1>Agregar To Do</h1>
-        <input type="text" id="todo-title-create" placeholder="title"/>
-        <input type="number" id="todo-user-create" placeholder="user"/>
-        <button id="todo-create">Agregar</button>
-    </section>
+
     <script src="variables.js"></script>
     <script src="printlist.js"></script>
     <script src="create.js"></script>
