--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
     <title>To Do!</title>
     
@@ -63,11 +63,11 @@
         </section>
     </section>
 
-    <script src="variables.js"></script>
-    <script src="printlist.js"></script>
-    <script src="create.js"></script>
-    <script src="delete.js"></script>
-   <script src="modify.js"></script>
+    <script src="./js/variables.js"></script>
+    <script src="./js/printlist.js"></script>
+    <script src="./js/create.js"></script>
+    <script src="./js/delete.js"></script>
+   <script src="./js/modify.js"></script>
     
     <script src=""></script>
     <script src=""></script>
