metodo searchbyuser done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <option value="text">Tarea</option>
                         <option value="status">Estado</option>
                     </select>
-                    <input type="text" id="todo-title-search" placeholder="ID"/>
+                    <input type="text" id="todo-input-search" placeholder="ID"/>
                 </div>
                 
             </section>
