metodo search by status done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                         <option value="id">ID</option> 
                         <option value="user" >Usuario</option>
                         <option value="text">Tarea</option>
-                        <option value="status">Estado</option>
+                        <option value="true">Completadas</option>
+                        <option value="false">No completadas</option>
                     </select>
                     <input type="text" id="todo-input-search" placeholder="ID"/>
                 </div>
