--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
                         <option value="id">ID</option> 
                         <option value="user" >Usuario</option>
                         <option value="text">Tarea</option>
-                        <option value="true">Completadas</option>
-                        <option value="false">No completadas</option>
                     </select>
                     <input type="text" id="todo-input-search" placeholder="ID"/>
+                </div>
+                <div id="todo-filter-div">
+                    <input type=radio value="all"> Todas
+                    <input type=radio value="done"> Completadas
+                    <input type=radio value="pending"> Pendientes
+
                 </div>
                 
             </section>
