--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <input type="text" id="todo-input-search" placeholder="ID"/>
                 </div>
                 <div id="todo-filter-div">
-                    <input type=radio value="all"> Todas
-                    <input type=radio value="done"> Completadas
-                    <input type=radio value="pending"> Pendientes
+                    <input name="filter" type=radio value="all" checked> Todas
+                    <input name="filter" type=radio value="done"> Completadas
+                    <input name="filter" type=radio value="pending"> Pendientes
 
                 </div>
                 
