ahora si filter done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section class="card-inputs">
                 <div id="todo-search-div">                    
                     <select id="searchSelect">
-                        <option value="" selected>Buscar por...</option>
+                        <option value="0" selected>Buscar por...</option>
                         <option value="id">ID</option> 
                         <option value="user" >Usuario</option>
                         <option value="text">Tarea</option>
